--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-<!--  아래 세 퍼미션 모두 넣었다 뺐다 해도 퍼미션이 거부됨.,.  -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <!--  아래 세 퍼미션 모두 넣었다 뺐다 해도 퍼미션이 거부됨.,.  -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="33"/>
-    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="33" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +17,10 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        tools:targetApi="31"
         android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
+        tools:targetApi="31">
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -31,12 +32,14 @@
                 android:resource="@xml/provider_path" />
         </provider>
 
-        <activity android:name=".activity.SetTagActivity"
+        <activity
+            android:name=".activity.SetTagActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
-        <activity android:name=".activity.SetDateActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".activity.SetDateActivity"
+            android:exported="false" />
 
         <activity
             android:name=".activity.MainActivity"
