--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.DatePickerActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".activity.SetTagActivity"
             android:exported="false"
